# synth-lib

./: .gitignore  LICENSE  README.md  pyproject.toml
app/lib/backtester/: __init__.py  backtest.py
app/lib/backtester/scripts/: run_backtest.py
docs/superpowers/specs/: 2026-07-11-backtester-3-competition-update-design.md
synth_lib/backtester/: __init__.py  backtest.py
synth_lib/backtester/scripts/: build_offline_bundle.py  plot_earnings_comparison.py  run_backtest.py  validate_earnings_formula.py  validate_reward_reconstruction.py
synth_lib/preparation/: market_data.py
tests/backtester/: test_backtest.py
tests/lib/backtester/: test_backtest.py
tests/preparation/: test_market_data.py
