[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]


[project]
name = "synth-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pyarrow>=24.0.0",
    "seaborn>=0.13.2",
    "synth-subnet",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]


[tool.uv.sources]
synth-subnet = { git = "https://github.com/synthdataco/synth-subnet" }
